<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Химический калькулятор</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Химический калькулятор</string>
    <string name="please_wait">Пожалуйста, подождите</string>
    <string name="user_type">Введите уравнение в поле ниже:</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="enter">Рассчитать</string>
    <string name="clear">Очистить всё</string>
    <string name="about">Справка</string>
    <string name="result">Результат</string>
    <string name="help">
        <![CDATA[
        <b>О приложении</b><br>
		Химический калькулятор предназначен для тех, кто начинает изучать химию или плохо в ней разбирается.
		Использование крайне просто: введите в приложение вещества-реагенты и получите на выходе продукты химической реакции.
		В дальнейшем планируется встроить в раздел справки краткий справочник по неорганической химии. Удачи!<br>
	<b>Использование</b><br>
		В данный момент приложение поддерживает до двух реагентов одновременно. Поддерживаются основные реакции неорганической химии:
		соединение, замещение, разложение и обмен. В данной версии нет (возможно и не будет) поддержки инертных газов, пероксидов, 
		окислительно-восстановительных реакций и возможности задать различные условия (температура, катализаторы и пр.).<br>
	<b>Синтаксис</b><br>
		Все вещества записываются в формате: элемент + индекс + (радикал/второй элемент) + индекс, например <b>Na(OH)</b>, <b>Ca(SO<SUB>4</SUB>)</b>, <b>Mg(Cl)<SUB>2</SUB></b>. 
		Если индекс равен 1, то он опускается. После нажатия кнопки "Рассчитать" все лишние скобки будут убраны, текст получит форматирование.<br>
	<b>Программа сообщает об ошибке, что делать?</b><br>
		Допущена синтаксическая ошибка. Если Вы уверены, что всё сделано правильно, то обязательно сообщите разработчику.<br>
	<b>О программе</b><br>
		Химический калькулятор v1.1<br>
		E-mail для обратной связи: verycoolbotan16@gmail.com]]>
        </string>
    <string name="title_activity_about">Справка</string>
    <string name="hello_world">Hello world!</string>

</resources>